<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    android:focusableInTouchMode="true">


    <EditText
        android:id="@+id/txtName"
        style="@style/modifiedEditText"
        android:layout_width="334dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_name_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtEmail"
        style="@style/modifiedEditText"
        android:layout_width="336dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumber"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtSurname"
        style="@style/modifiedEditText"
        android:layout_width="336dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_surname_hint"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="Kayıt Ol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtNumber"
        style="@style/modifiedEditText"
        android:layout_width="338dp"
        android:layout_height="34dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_mobile_number_hint"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSurname"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/modifiedEditText"
        android:layout_width="336dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/registerButton"
        style="@style/registerButton"
        android:layout_gravity="right"
        android:layout_marginTop="24dp"
        android:text="Kayıt Ol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtGetLogin"
        android:layout_width="151dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:hint="Hesabım var, Giriş Yap"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />


    tools:context=".MainActivity"/>
</androidx.constraintlayout.widget.ConstraintLayout>