<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/textView"
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="Giriş"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLoginEmail"
        style="@style/modifiedEditText"
        android:layout_width="301dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtLoginPassword"
        style="@style/modifiedEditText"
        android:layout_width="303dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginEmail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        style="@style/loginButton"
        android:layout_gravity="right"
        android:layout_marginTop="24dp"
        android:text="Giriş Yap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <TextView
        android:id="@+id/textRegisterGecis"
        android:layout_width="188dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:hint="@string/login_signup_hint"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
    tools:context=".MainActivity"/>
</androidx.constraintlayout.widget.ConstraintLayout>